--- a/.github/workflows/python-utility-app.yml
+++ b/.github/workflows/python-utility-app.yml
@@ -34,3 +34,6 @@ jobs:
     - name: Run Unit Tests
       run: |
         python -m unittest discover  # This will discover and run all unit tests in the project
+    - name: Run Pytest
+      run: |
+        pytest test_session14.py  # This will run tests in test_session14.py
